# surreal-tasks

backend/: .gitignore  Cargo.toml  Rocket.toml
backend/src/: auth.rs  catchers.rs  database.rs  error.rs  main.rs  settings.rs  user.rs
backend/src/model/: auth.rs  task.rs  user.rs
backend/src/routes/: auth.rs  task.rs  user.rs
