[package]
name = "surreal-tasks"
version = "0.0.0"
authors = ["Pandier"]
edition = "2021"
repository = "https://github.com/pandier/surreal-todo.git"
license = "GPL-3.0-or-later"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
surrealdb = "1.3"
serde = { version = "1.0", features = ["derive"] }

eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
